🐛 BUGFIX: 프로젝트에 참여하고있는 User만 Comment를 달 수 있도록 수정